2006-06-04  Chris Lyttle  <chris@wilddev.net>
	
	* xmldocs.make: fixups to make distcheck work
	* configure.in: add --disable-scrollkeeper switch
	* help/de_DE/Makefile.am: add DISTCLEANFILES
	* help/C/Makefile.am: add DISTCLEANFILES
	* guide/de_DE/Makefile.am: add DISTCLEANFILES
	* guide/C/Makefile.am: add DISTCLEANFILES
	* omf.make: make scrollkeeper run conditional
	* Makefile.am: add --disable-scrollkeeper switch

2006-05-28  Chris Lyttle  <chris@wilddev.net>

	* xmldocs.make: fix uninstall. note that distcheck fails still 
	  because scrollkeeper doesn't cleans itself up properly.
	* omf.make: fix uninstall
	* NEWS: Updated for 1.9.0 release
	* README: Updated for 1.9.0 release
	* HACKING: Updated for 1.9.0 release
	* doc-tools: removed this directory and all files
	* AUTHORS: Added new contributors

2006-05-23  Chris Lyttle  <chris@wilddev.net>

	* Updated the following (from Bengt Thuree <bengt@thuree.com>):
	'guide/C/ch_currency.xml'

	* Added the following new screenshots (from Bengt Thuree
	<bengt@thuree.com>):
	'guide/C/figures/currency_PutTogether_AfterStocks.png'
	
	* Updated the following (from Dave Herman <dvherman@bigfoot.com>):
        'guide/C/ch_invest.xml'

        * Added the following new screenshots (from Dave
	Herman <dvherman@bigfoot.com>):
	'guide/C/figures/invest_split1.png'
	'guide/C/figures/invest_split3.png'
	'guide/C/figures/invest_split5.png'
	'guide/C/figures/invest_merge2.png'
	'guide/C/figures/invest_split2.png'
	'guide/C/figures/invest_split4.png'
	'guide/C/figures/invest_merge3.png'
	'guide/C/figures/invest_stockmerge1.png'
	'guide/C/figures/invest_simplesplit1.png'

	* Updated the following (from Patrick Schweiger <pks@spiffykitty.com>):
	'guide/C/ch_bus_ar.xml'
	'guide/C/ch_bus_ap.xml'
	'guide/C/ch_bus_pay.xml'

	* Added the following new screenshots (from Patrick Schweiger
	<pks@spiffykitty.com>):
	'guide/C/figures/bus_pay_ex1.png'
	'guide/C/figures/bus_pay_ex3.png'
	'guide/C/figures/bus_ap_jobnew.png'