@@ -674,9 +674,8 @@
 
       <para>When you have marked off all the items on the bank statement, and
       when the difference is $0.00, press the Finish button on the tool bar or
-      select Finish from the Reconcile menu (the latter method will work even
-      if your "Difference" isn't $0.00). The Reconcile window will close. In
-      the Register window, the R field of the reconciled transactions will
+      select Finish from the Reconcile menu. The Reconcile window will close.
+      In the Register window, the R field of the reconciled transactions will
       change to 'y'.</para>
 
       <para>In this case, we have not received all the information yet, so we
