@@ -1,3 +1,8 @@
+2006-06-21  David Hampton  <hampton@employees.org>
+
+	* guide/C/ch_txns.xml: Correct mistake about when the "Finish"
+	menu item can be selected.
+
 2006-06-04  Chris Lyttle  <chris@wilddev.net>
 	
 	* xmldocs.make: fixups to make distcheck work
